--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: isoviz
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Visualize transcript isoforms alongside exon-exon junction counts
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Karin Isaev
+Maintainer: The package maintainer <kisaev@nygenome.org>
+Description: Visualize which junctions are being utilized alongside annotated
+    transcript isoforms. Find appropriate guide RNAs to target junction for 
+    isoform specific knockdown. 
+License: MIT
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 2.10)
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+RoxygenNote: 7.2.3
