--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: isoviz
 Type: Package
 Title: Visualize transcript isoforms alongside exon-exon junction counts
 Version: 0.1.0
-Author: Karin Isaev
+Author: Karin Isaev and Megan Schertzer
 Maintainer: The package maintainer <kisaev@nygenome.org>
 Description: Visualize which junctions are being utilized alongside annotated
     transcript isoforms. Find appropriate guide RNAs to target junction for 
