add scaling and mapping

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(isoviz_coords)
 export(isoviz_minicutter)
 export(isoviz_plot_juncs_to_iso)
+export(isoviz_rescale_introns)
 export(leafcutter_one_step)
-export(map_all_junctions)
 export(plot_isoforms)
 import(Matrix)
 import(data.table)
