--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,5 +34,6 @@ InstData: data/gencode_v41_gene_transcript_convert.txt,
           data/gencode.v41.basic.annotation.psl,
           data/hESC-MKNK2-G1_v41_basic.junc,
           data/gencode_intron_all_data.rda,
-          figures/rbfox2_hesc_filtered.png
+          figures/rbfox2_hesc_filtered.png,
+          docs/isoviz.html
 RoxygenNote: 7.2.3
