--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,15 +7,11 @@ Maintainer: <kisaev@nygenome.org>
 Description: Visualize which junctions are being utilized alongside annotated
     transcript isoforms. Find appropriate guide RNAs to target junction for 
     isoform specific knockdown. 
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: 
-    R (>= 2.10)
-Suggests: 
-    knitr,
-    rmarkdown
-Imports:
+    R (>= 2.10),
     data.table, 
     ggpubr, 
     readr,
@@ -29,6 +25,9 @@ Imports:
     magrittr,
     ggsci,
     cowplot
+Suggests: 
+    knitr,
+    rmarkdown
 VignetteBuilder: knitr
 InstData: data/gencode_v41_gene_transcript_convert.txt,
           data/gencode.v41.basic.annotation.psl,
