--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,7 @@ VignetteBuilder: knitr
 InstData: data/gencode_v41_gene_transcript_convert.txt,
           data/gencode.v41.basic.annotation.psl,
           data/hESC-MKNK2-G1_v41_basic.junc,
+          data/a375-total_Aligned.q20.sort.junc,
           data/gencode_intron_all_data.rda,
-          figures/isoviz.png,
-          docs/isoviz.html
+          figures/isoviz.png
 RoxygenNote: 7.2.3
