--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(isoviz_map_junctions)
 export(isoviz_minicutter)
 export(isoviz_plot_juncs_to_iso)
 export(isoviz_rescale_introns)
+export(junctions)
 export(leafcutter_one_step)
