--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,5 +36,5 @@ InstData: data/gencode_v41_gene_transcript_convert.txt,
           data/a375-total_Aligned.q20.sort.junc,
           data/gencode_intron_all_data.rda,
           data/gencode_predictions.rda.gz,
-          figures/isoviz.png
+          figures/isoviz_logo.png
 RoxygenNote: 7.2.3
