added function to obtain gene trans conversion from gtf

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,12 +18,12 @@ Depends:
     tidyverse,
     stringr,
     tidyr,
-    readr,
     Matrix,
     dplyr, 
     igraph,
     magrittr,
     ggsci,
+    plyr,
     cowplot,
     rempsyc,
     GenomicFeatures,
